segundo mail con comentarios de Belu

--- a/test/swansea/about.html
+++ b/test/swansea/about.html
@@ -148,8 +148,8 @@
                                     </div>
                                     <div>
                                         <h4 class="mb-1">Misión</h4>
-                                        <p class="mb-0">Proporcionar junto nuestros proveedores, un servicio eficiente y comprometido con la excelenncia, que permita a nuestros clientes cumplir con sus objtivos comerciales. Brindar a nuestro equipo de colaborares un
-                                            ambiente laboral estable, con posibiulidades de capacitación y desarrollo actuando de manera responsable con la sociedad y el medio ambiente.</p>
+                                        <p class="mb-0">Proporcionar junto nuestros proveedores, un servicio eficiente y comprometido con la excelencia, que permita a nuestros clientes cumplir con sus objetivos comerciales. Brindar a nuestro equipo de colaboradores un
+                                            ambiente laboral estable, con posibilidades de capacitación y desarrollo actuando de manera responsable con la sociedad y el medio ambiente.</p>
                                     </div>
                                 </div>
                             </div>
@@ -164,7 +164,7 @@
                                     </div>
                                     <div>
                                         <h4 class="mb-1">Visión</h4>
-                                        <p class="mb-0">Ser una organiacion Líder y mantenernos como referente en el país en la provisión de servicios de agenciamiento marítimo</p>
+                                        <p class="mb-0">Ser una organización Líder y mantenernos como referente en el país en la provisión de servicios de agenciamiento marítimo</p>
                                     </div>
                                 </div>
                             </div>
@@ -179,7 +179,7 @@
                                     </div>
                                     <div>
                                         <h4 class="mb-1">Compromiso</h4>
-                                        <p class="mb-0">Cumplir con los requisitos legales que regulan nuestra acgtividad asi como en los sistemas de calidad de la organizacion buscando de esta forma mejorar continuamente.</p>
+                                        <p class="mb-0">Cumplir con los requisitos legales que regulan nuestra actividad así como en los sistemas de calidad de la organización buscando de esta forma mejorar continuamente.</p>
                                     </div>
                                 </div>
                             </div>
@@ -302,25 +302,25 @@
                             <div class="col-md-3">
                                 <img src="./assets/img/icons/lineal/check.svg" class="svg-inject icon-svg icon-svg-lg text-primary mb-3" alt="" />
                                 <h3 class="counter">7518</h3>
-                                <p>Completed Projects</p>
+                                <p>Proyectos completados</p>
                             </div>
                             <!--/column -->
                             <div class="col-md-3">
                                 <img src="./assets/img/icons/lineal/user.svg" class="svg-inject icon-svg icon-svg-lg text-primary mb-3" alt="" />
                                 <h3 class="counter">3472</h3>
-                                <p>Satisfied Customers</p>
+                                <p>Clientes satisfechos</p>
                             </div>
                             <!--/column -->
                             <div class="col-md-3">
                                 <img src="./assets/img/icons/lineal/briefcase-2.svg" class="svg-inject icon-svg icon-svg-lg text-primary mb-3" alt="" />
                                 <h3 class="counter">2184</h3>
-                                <p>Expert Employees</p>
+                                <p>Empleados Senior</p>
                             </div>
                             <!--/column -->
                             <div class="col-md-3">
-                                <img src="./assets/img/icons/lineal/award-2.svg" class="svg-inject icon-svg icon-svg-lg text-primary mb-3" alt="" />
-                                <h3 class="counter">4523</h3>
-                                <p>Awards Won</p>
+                                <img src="./assets/img/icons/lineal/rocket.svg" class="svg-inject icon-svg icon-svg-lg text-primary mb-3" alt="" />
+                                <h3 class="counter">502.367</h3>
+                                <p>Tonelada de mercadería</p>
                             </div>
                             <!--/column -->
                         </div>
@@ -349,7 +349,7 @@
                             </div>
                             <div>
                                 <h5 class="mb-1">Dirección</h5>
-                                <address>Avda. Aviadores del Chaco N° 2581 Edificio Sky Park Torre 1 Piso 13 Oficina D <br class="d-none d-md-block" />Asuncion, Paraguay</address>
+                                <address>Avda. Aviadores del Chaco N° 2581 Edificio Sky Park Torre 1 Piso 13 Oficina D <br class="d-none d-md-block" />Asunción, Paraguay</address>
                             </div>
                         </div>
                         <div class="d-flex flex-row">
@@ -357,7 +357,7 @@
                                 <div class="icon text-primary fs-28 me-6 mt-n1"> <i class="uil uil-phone-volume"></i> </div>
                             </div>
                             <div>
-                                <h5 class="mb-1">Telefono</h5>
+                                <h5 class="mb-1">Teléfono</h5>
                                 <p>+595 21 328 9690</p>
                             </div>
                         </div>
@@ -399,7 +399,7 @@
                 <div class="col-md-4 col-lg-3">
                     <div class="widget">
                         <h4 class="widget-title text-white mb-3">Sigamos en contacto</h4>
-                        <address class="pe-xl-15 pe-xxl-17">Avda. Aviadores del Chaco N° 2581 Edificio Sky Park, Torre 1, Piso 13 Oficina D, Asuncion, Paraguay</address>
+                        <address class="pe-xl-15 pe-xxl-17">Avda. Aviadores del Chaco N° 2581 Edificio Sky Park, Torre 1, Piso 13 Oficina D, Asunción, Paraguay</address>
                         <a href="mailto:info@swansea.com.py">info@swansea.com.py</a><br /> +595 21 328 9690
                     </div>
                     <!-- /.widget -->
