--- a/test/swansea/contact.html
+++ b/test/swansea/contact.html
@@ -137,7 +137,7 @@
                                             </div>
                                             <div class="align-self-start justify-content-start">
                                                 <h5 class="mb-1">Direccion</h5>
-                                                <address>Avda. Aviadores del Chaco N° 2581 Edificio Sky Park Torre 1 Piso 13 Oficina D <br class="d-none d-md-block" />Asuncion, Paraguay</address>
+                                                <address>Avda. Aviadores del Chaco N° 2581 Edificio Sky Park Torre 1 Piso 13 Oficina D <br class="d-none d-md-block" />Asunción, Paraguay</address>
                                             </div>
                                         </div>
                                         <!--/div -->
@@ -304,7 +304,7 @@
                     <div class="col-md-4 col-lg-3">
                         <div class="widget">
                             <h4 class="widget-title text-white mb-3">Sigamos en contacto/h4>
-                                <address class="pe-xl-15 pe-xxl-17">Avda. Aviadores del Chaco N° 2581 Edificio Sky Park, Torre 1, Piso 13 Oficina D, Asuncion, Paraguay</address>
+                                <address class="pe-xl-15 pe-xxl-17">Avda. Aviadores del Chaco N° 2581 Edificio Sky Park, Torre 1, Piso 13 Oficina D, Asunción, Paraguay</address>
                                 <a href="mailto:info@swansea.com.py">info@swansea.com.py</a><br /> +595 21 328 9690
                         </div>
                         <!-- /.widget -->
