--- a/test/swansea/index.html
+++ b/test/swansea/index.html
@@ -567,7 +567,7 @@
                 <div class="col-md-4 col-lg-2">
                     <div class="widget">
                         <h4 class="widget-title text-white mb-3">Sigamos en contacto</h4>
-                        <address> Asuncion, Paraguay</address>
+                        <address> Asunción, Paraguay</address>
                         <a href="mailto:info@swansea.com.py">info@swansea.com.py</a><br /> 00 (123) 456 78 90
                     </div>
                     <!-- /.widget -->
