--- a/test/swansea/links.html
+++ b/test/swansea/links.html
@@ -301,7 +301,7 @@
                     <div class="col-md-4 col-lg-3">
                         <div class="widget">
                             <h4 class="widget-title text-white mb-3">Sigamos en contacto</h4>
-                            <address class="pe-xl-15 pe-xxl-17">Avda. Aviadores del Chaco N° 2581 Edificio Sky Park, Torre 1, Piso 13 Oficina D, Asuncion, Paraguay</address>
+                            <address class="pe-xl-15 pe-xxl-17">Avda. Aviadores del Chaco N° 2581 Edificio Sky Park, Torre 1, Piso 13 Oficina D, Asunción, Paraguay</address>
                             <a href="mailto:info@swansea.com.py">info@swansea.com.py</a><br /> +595 21 328 9690
                         </div>
                         <!-- /.widget -->
