3er mail de belu, y home mas compacto

--- a/test/swansea/contact.html
+++ b/test/swansea/contact.html
@@ -32,7 +32,7 @@
                             <ul class="navbar-nav">
                                 <li class="nav-item dropdown dropdown-mega">
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link " href="./about.html">Sobre Nosotros</a>
+                                        <a class="nav-link " href="./about.html">Sobre nosotros</a>
                                     </li>
                                     <li class="nav-item dropdown">
                                         <a class="nav-link " href="./services.html">Servicios</a>
@@ -303,9 +303,9 @@
                     <!-- /column -->
                     <div class="col-md-4 col-lg-3">
                         <div class="widget">
-                            <h4 class="widget-title text-white mb-3">Sigamos en contacto/h4>
-                                <address class="pe-xl-15 pe-xxl-17">Avda. Aviadores del Chaco N° 2581 Edificio Sky Park, Torre 1, Piso 13 Oficina D, Asunción, Paraguay</address>
-                                <a href="mailto:info@swansea.com.py">info@swansea.com.py</a><br /> +595 21 328 9690
+                            <h4 class="widget-title text-white mb-3">Sigamos en contacto</h4>
+                            <address class="pe-xl-15 pe-xxl-17">Avda. Aviadores del Chaco N° 2581 Edificio Sky Park, Torre 1, Piso 13 Oficina D, Asunción, Paraguay</address>
+                            <a href="mailto:info@swansea.com.py">info@swansea.com.py</a><br /> +595 21 328 9690
                         </div>
                         <!-- /.widget -->
                     </div>
