--- a/test/swansea/index.html
+++ b/test/swansea/index.html
@@ -132,7 +132,7 @@
                     <div class="card-body py-12 py-lg-14 px-lg-11 py-xl-16 px-xl-13">
                         <div class="row text-center">
                             <div class="col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                                <h2 class="fs-15 text-uppercase text-muted mb-3">Que hacemos?</h2>
+                                <h2 class="fs-15 text-uppercase text-muted mb-3">¿Que hacemos?</h2>
                                 <h3 class="display-4 mb-9">Brindamos servicios de Agenciamiento Maritimo</h3>
                             </div>
                             <!-- /column -->
@@ -165,57 +165,12 @@
                             <!--/column -->
                         </div>
                         <!--/.row -->
-                        <div class="row gx-md-8 gx-xl-12 gy-10 align-items-center">
-                            <div class="col-lg-6">
-                                <h2 class="fs-15 text-uppercase text-muted mb-3">Nuestro Grupo</h2>
-                                <h3 class="display-4 mb-5">Somos parte de Grupo Repremar.</h3>
-                                <p>Con su Headquarters en Uruguay, REPREMAR es un grupo de empresas de primera línea que ofrece servicios de agenciamiento marítimo, transporte internacional de cargas, operaciones portuarias, servicios integrales de logística,
-                                    GSA de carga para aerolíneas, bienes raíces y proyectos especiales. Nuestra empresa madre, REPREMAR Shipping es una reconocida agencia marítima que ofrece servicios de back-office para cruceros, portacontenedores, petroleros,
-                                    graneleros y buques de enlace que operan en cualquier puerto de la región. .</p>
-                                <a href="https://www.repremar.com" class="btn btn-primary rounded-pill mb-0">Visita nuestra web</a>
-                            </div>
-                            <!--/column -->
-                            <div class="col-lg-6">
-                                <div class="d-flex flex-row">
-                                    <div>
-                                        <span class="icon btn btn-block btn-lg btn-soft-purple disabled mt-1 me-5"><span class="number fs-22">01</span></span>
-                                    </div>
-                                    <div>
-                                        <h4 class="mb-1">Un poco de nuestra historia?</h4>
-                                        <p class="mb-0">Somos un grupo de empresas relacionadas principalmente al comercio exterior, nuestra casa madre Repremar Shipping fue fundada en 1946 en Uruguay, pertenecía antiguamente al Vestey Group (Inglaterra). En 1982 fue
-                                            adquirida por la familia Pena. Con los nuevos propietarios la empresa fue reorganizada logrando una gran expansión en sus actividades y en el alcance de sus servicios.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="d-flex flex-row mt-8 ms-lg-10">
-                                    <div>
-                                        <span class="icon btn btn-block btn-lg btn-soft-green disabled mt-1 me-5"><span class="number fs-22">02</span></span>
-                                    </div>
-                                    <div>
-                                        <h4 class="mb-1">A quienes representa Repremar Group?</h4>
-                                        <p class="mb-0">Representamos a algunas de las compañías navieras más importantes del mundo, como COSCO, CHINA SHIPPING y CSAV han confiado en REPREMAR Shipping como su socio regional, estableciendo joint-ventures en Uruguay, Argentina,
-                                            en 1993, 2005 y 2008 respectivamente..</p>
-                                    </div>
-                                </div>
-                                <div class="d-flex flex-row mt-8">
-                                    <div>
-                                        <span class="icon btn btn-block btn-lg btn-soft-orange disabled mt-1 me-5"><span class="number fs-22">03</span></span>
-                                    </div>
-                                    <div>
-                                        <h4 class="mb-1">Repremar Logistics</h4>
-                                        <p class="mb-0">El ritmo del mundo globalizado y sus nuevas demandas llevaron a la creación de REPREMAR Logistics. Originalmente concebida en 1996 como una división de REPREMAR Shipping para desarrollar el transporte de carga marítimo
-                                            y aéreo, REPREMAR Logistics se independizó el 1° de mayo de 1999. Actualmente es una de las empresas más reconocidas a nivel regional en el servicio de transporte de cargas entre Asia y la costa este de América
-                                            del Sur.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--/column -->
-                        </div>
+
                         <!--/.row -->
-                        <hr class="my-14 my-md-16" />
+
                         <div class="row gx-lg-8 gx-xl-12 gy-10 gy-lg-0 mb-11 align-items-end">
                             <div class="col-lg-4">
-                                <h2 class="fs-15 text-uppercase text-muted mb-3">Company Facts</h2>
+                                <h2 class="fs-15 text-uppercase text-muted mb-3">Algunos datos extra</h2>
                                 <h3 class="display-4 mb-0">Alguno de nuestros datos</h3>
                             </div>
                             <!-- /column -->
@@ -414,37 +369,7 @@
                             <!-- /.swiper -->
                         </div>
                         <!-- /.swiper-container -->
-                        <hr class="my-14 my-md-16" />
-                        <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-17 align-items-center">
-                            <div class="col-md-8 col-lg-6 order-lg-2">
-                                <figure class="rounded"><img src="./assets/img/photos/ymloffice2.jpeg" srcset="./assets/img/photos/about24@2x.jpg 2x" alt=""></figure>
-                            </div>
-                            <!--/column -->
-                            <div class="col-lg-6">
-                                <h2 class="fs-15 text-uppercase text-muted mb-3">Nuestro negocio</h2>
-                                <h3 class="display-4 mb-5">Ahorra tiempo y dinero eligiendo nuestros servicios profesionales.</h3>
-                                <p class="mb-6">Somos representantes de Yang Ming Lines, trabajamos codo a codo la linea desde hace años, somos expertos, nos esforzamos para optimizar el proceso, haciendo ahorrar tiempo y dinero a nuestros clientes pero tambien mejorando
-                                    la experiencia.</p>
-                                <div class="row gy-3 gx-xl-8">
-                                    <div class="col-xl-6">
-                                        <ul class="icon-list bullet-bg bullet-soft-primary mb-0">
-                                            <li><span><i class="uil uil-check"></i></span><span>servicios para todo tipo de buques</span></li>
-                                            <li class="mt-3"><span><i class="uil uil-check"></i></span><span>Servicio de back-office, como por ejemplo: manejo y procesamiento de todos los documentos para actividades de importación/exportación, etc.</span></li>
-                                        </ul>
-                                    </div>
-                                    <!--/column -->
-                                    <div class="col-xl-6">
-                                        <ul class="icon-list bullet-bg bullet-soft-primary mb-0">
-                                            <li><span><i class="uil uil-check"></i></span><span>Arribo y despacho de buques, solicitud de muelle de atraque, solicitud de prácticos, remolcadores, etc.</span></li>
-                                            <li class="mt-3"><span><i class="uil uil-check"></i></span><span>Estibas, Carga/Descarga de buques, logística dentro de recintos portuarios, Regimen de Puerto Libre, etc.</span></li>
-                                        </ul>
-                                    </div>
-                                    <!--/column -->
-                                </div>
-                                <!--/.row -->
-                            </div>
-                            <!--/column -->
-                        </div>
+
                         <!--/.row -->
                         <div class="row gy-10 gx-lg-8 gx-xl-12 mb-14 mb-md-16 align-items-center">
                             <div class="col-md-8 col-lg-6">
@@ -452,8 +377,8 @@
                             </div>
                             <!--/column -->
                             <div class="col-lg-6">
-                                <h2 class="fs-15 text-uppercase text-muted mb-3">Porque elegirnos?</h2>
-                                <h3 class="display-4 mb-7">Algunas razones que mas valoran nuestros clientes.</h3>
+                                <h2 class="fs-15 text-uppercase text-muted mb-3">¿Porque elegirnos?</h2>
+                                <h3 class="display-4 mb-7">Algunas razones por las que nuestros clientes nos eligen</h3>
                                 <div class="accordion accordion-wrapper" id="accordionExample">
                                     <div class="card plain accordion-item">
                                         <div class="card-header" id="headingOne">
@@ -534,8 +459,8 @@
             <div class="row gy-6 gy-lg-0">
                 <div class="col-lg-4">
                     <div class="widget">
-                        <h3 class="h2 mb-3 text-white">Estemos en contacto!</h3>
-                        <p class="lead mb-5">Realicemos grandes negocios juntos. Confia en nosotros como otros clientes lo hacen. Unete a nuestros servicios los cuales harán crecer tu negocio.</p>
+                        <h3 class="h2 mb-3 text-white">Sigamos en contacto</h3>
+                        <p class="lead mb-5">Realicemos grandes negocios juntos. Confía en nosotros como otros clientes lo hacen. Únete a nuestros servicios los cuales harán crecer tu negocio.</p>
                         <a href="contact.html" class="btn btn-white  rounded-pill">Contáctanos</a>
                     </div>
                     <!-- /.widget -->
@@ -543,7 +468,7 @@
                 <!-- /column -->
                 <div class="col-md-4 col-lg-2 offset-lg-2">
                     <div class="widget">
-                        <h4 class="widget-title text-white mb-3">Necesitas ayuda?</h4>
+                        <h4 class="widget-title text-white mb-3">¿Necesitas ayuda?</h4>
                         <ul class="list-unstyled text-reset mb-0">
                             <li><a href="./contact.html">Contacta con soporte</a></li>
                         </ul>
