--- a/test/swansea/index.html
+++ b/test/swansea/index.html
@@ -171,7 +171,7 @@
                         <div class="row gx-lg-8 gx-xl-12 gy-10 gy-lg-0 mb-11 align-items-end">
                             <div class="col-lg-4">
                                 <h2 class="fs-15 text-uppercase text-muted mb-3">Algunos datos extra</h2>
-                                <h3 class="display-4 mb-0">Alguno de nuestros datos</h3>
+                                <h3 class="display-4 mb-0">Algunos de nuestros datos</h3>
                             </div>
                             <!-- /column -->
                             <div class="col-lg-8 mt-lg-2">
